# PaperFoundry

./: .gitignore  CLAUDE.md  LICENSE  README.md  analyze.py  app.py  bibextract.py  filter.py  llm.py  monitor.py  ollama_client.py  papertrack.toml  pyproject.toml  topics.json
PaperFoundry/: __init__.py  cli.py  filter.py  llm.py  monitor.py  prompt.py  topics.py
PaperFoundry/prompts/: fast.prompt
prompts/: fast_system.txt  fast_user.txt
static/: app.js  style.css
templates/: index.html
